@@ -1,3 +1,3 @@
 [bdist_rpm]
-requires=ao
+requires=libao
 build_script=prebuild.sh
